Added RootShell 1.2. Removed RootTools. Fixed code for addition of RootShell.