@@ -1,7 +1,7 @@
 /* 
- * This file is part of the RootTools Project: http://code.google.com/p/roottools/
+ * This file is part of the RootShell Project: http://code.google.com/p/RootShell/
  *  
- * Copyright (c) 2012 Stephen Erickson, Chris Ravenscroft, Dominik Schuermann, Adam Shanks
+ * Copyright (c) 2014 Stephen Erickson, Chris Ravenscroft
  *  
  * This code is dual-licensed under the terms of the Apache License Version 2.0 and
  * the terms of the General Public License (GPL) Version 2.
@@ -19,20 +19,28 @@
  * See each License for the specific language governing permissions and
  * limitations under that License.
  */
-package com.stericson.RootTools.execution;
+package com.stericson.RootShell.execution;
 
-import java.io.*;
+import com.stericson.RootShell.RootShell;
+import com.stericson.RootShell.exceptions.RootDeniedException;
+
+import android.content.Context;
+import android.util.Log;
+
+import java.io.BufferedReader;
+import java.io.EOFException;
+import java.io.File;
+import java.io.FileInputStream;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.InputStreamReader;
+import java.io.OutputStreamWriter;
+import java.io.Reader;
+import java.io.Writer;
 import java.lang.reflect.Field;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.concurrent.TimeoutException;
-
-import android.content.Context;
-import android.provider.DocumentsContract;
-import android.util.Log;
-
-import com.stericson.RootTools.RootTools;
-import com.stericson.RootTools.exceptions.RootDeniedException;
 
 public class Shell {
 
@@ -54,8 +62,7 @@ public class Shell {
 
         private String value;
 
-        private ShellContext(String value)
-        {
+        private ShellContext(String value) {
             this.value = value;
         }
 
@@ -67,61 +74,100 @@ public class Shell {
 
     //Statics -- visible to all
     private static final String token = "F*D^W@#FGF";
+
     private static Shell rootShell = null;
+
     private static Shell shell = null;
+
     private static Shell customShell = null;
+
+    private static String[] suVersion = new String[]{
+            null, null
+    };
 
     //the default context for root shells...
     public static ShellContext defaultContext = ShellContext.NORMAL;
 
     //per shell
     private int shellTimeout = 25000;
+
     private ShellType shellType = null;
-    private ShellContext shellContext = Shell.ShellContext.NORMAL;
+
+    private ShellContext shellContext = ShellContext.NORMAL;
 
     private String error = "";
 
     private final Process proc;
-    private final BufferedReader in;
-    private final OutputStreamWriter out;
+
+    private final BufferedReader inputStream;
+
+    private final BufferedReader errorStream;
+
+    private final OutputStreamWriter outputStream;
+
     private final List<Command> commands = new ArrayList<Command>();
 
     //indicates whether or not to close the shell
     private boolean close = false;
 
+    private Boolean isSELinuxEnforcing = null;
+
     public boolean isExecuting = false;
+
     public boolean isReading = false;
+
     public boolean isClosed = false;
 
     private int maxCommands = 5000;
+
     private int read = 0;
+
     private int write = 0;
+
     private int totalExecuted = 0;
+
     private int totalRead = 0;
+
     private boolean isCleaning = false;
 
     private Shell(String cmd, ShellType shellType, ShellContext shellContext, int shellTimeout) throws IOException, TimeoutException, RootDeniedException {
 
-        RootTools.log("Starting shell: " + cmd);
-        RootTools.log("Context: " + shellContext.getValue());
-        RootTools.log("Timeout: " + shellTimeout);
+        RootShell.log("Starting shell: " + cmd);
+        RootShell.log("Context: " + shellContext.getValue());
+        RootShell.log("Timeout: " + shellTimeout);
 
         this.shellType = shellType;
         this.shellTimeout = shellTimeout > 0 ? shellTimeout : this.shellTimeout;
         this.shellContext = shellContext;
 
-        if(this.shellContext == ShellContext.NORMAL)
-        {
-            this.proc = new ProcessBuilder(cmd).redirectErrorStream(true).start();
-        }
-        else
-        {
+        if (this.shellContext == ShellContext.NORMAL) {
+            this.proc = Runtime.getRuntime().exec(cmd);
+        } else {
+            String display = getSuVersion(false);
+            String internal = getSuVersion(true);
+
             //only done for root shell...
-            this.proc = new ProcessBuilder(cmd, "--context " + this.shellContext.getValue()).redirectErrorStream(true).start();
+            //Right now only SUPERSU supports the --context switch
+            if (isSELinuxEnforcing() &&
+                    (display != null) &&
+                    (internal != null) &&
+                    (display.endsWith("SUPERSU")) &&
+                    (Integer.valueOf(internal) >= 190)) {
+                cmd += " --context " + this.shellContext.getValue();
+            } else {
+                RootShell.log("Su binary --context switch not supported!");
+                RootShell.log("Su binary display version: " + display);
+                RootShell.log("Su binary internal version: " + internal);
+                RootShell.log("SELinuxEnforcing: " + isSELinuxEnforcing());
+            }
+
+            this.proc = Runtime.getRuntime().exec(cmd);
+
         }
 
-        this.in = new BufferedReader(new InputStreamReader(this.proc.getInputStream(), "UTF-8"));
-        this.out = new OutputStreamWriter(this.proc.getOutputStream(), "UTF-8");
+        this.inputStream = new BufferedReader(new InputStreamReader(this.proc.getInputStream(), "UTF-8"));
+        this.errorStream = new BufferedReader(new InputStreamReader(this.proc.getErrorStream(), "UTF-8"));
+        this.outputStream = new OutputStreamWriter(this.proc.getOutputStream(), "UTF-8");
 
         /**
          * Thread responsible for carrying out the requested operations
@@ -147,10 +193,12 @@ public class Shell {
 
                 try {
                     this.proc.destroy();
-                } catch (Exception e) {}
+                } catch (Exception e) {
+                }
 
-                closeQuietly(this.in);
-                closeQuietly(this.out);
+                closeQuietly(this.inputStream);
+                closeQuietly(this.errorStream);
+                closeQuietly(this.outputStream);
 
                 throw new TimeoutException(this.error);
             }
@@ -161,10 +209,12 @@ public class Shell {
 
                 try {
                     this.proc.destroy();
-                } catch (Exception e) {}
+                } catch (Exception e) {
+                }
 
-                closeQuietly(this.in);
-                closeQuietly(this.out);
+                closeQuietly(this.inputStream);
+                closeQuietly(this.errorStream);
+                closeQuietly(this.outputStream);
 
                 throw new RootDeniedException("Root Access Denied");
             }
@@ -196,14 +246,18 @@ public class Shell {
 
 
     public Command add(Command command) throws IOException {
-        if (this.close)
+        if (this.close) {
             throw new IllegalStateException(
                     "Unable to add commands to a closed shell");
+        }
 
         while (this.isCleaning) {
             //Don't add commands while cleaning
             ;
         }
+
+        command.resetCommand();
+
         this.commands.add(command);
 
         this.notifyThreads();
@@ -211,9 +265,9 @@ public class Shell {
         return command;
     }
 
-    public void useCWD(Context context) throws IOException, TimeoutException, RootDeniedException {
+    public final void useCWD(Context context) throws IOException, TimeoutException, RootDeniedException {
         add(
-                new CommandCapture(
+                new Command(
                         -1,
                         false,
                         "cd " + context.getApplicationInfo().dataDir)
@@ -223,7 +277,7 @@ public class Shell {
     private void cleanCommands() {
         this.isCleaning = true;
         int toClean = Math.abs(this.maxCommands - (this.maxCommands / 4));
-        RootTools.log("Cleaning up: " + toClean);
+        RootShell.log("Cleaning up: " + toClean);
 
         for (int i = 0; i < toClean; i++) {
             this.commands.remove(0);
@@ -239,7 +293,8 @@ public class Shell {
             if (input != null) {
                 input.close();
             }
-        } catch (Exception ignore) {}
+        } catch (Exception ignore) {
+        }
     }
 
     private void closeQuietly(final Writer output) {
@@ -247,10 +302,24 @@ public class Shell {
             if (output != null) {
                 output.close();
             }
-        } catch (Exception ignore) {}
+        } catch (Exception ignore) {
+        }
     }
 
     public void close() throws IOException {
+        RootShell.log("Request to close shell!");
+
+        int count = 0;
+        while (isExecuting) {
+            RootShell.log("Waiting on shell to finish executing before closing...");
+            count++;
+
+            //fail safe
+            if (count > 10000) {
+                break;
+            }
+
+        }
 
         synchronized (this.commands) {
             /**
@@ -261,48 +330,48 @@ public class Shell {
             this.notifyThreads();
         }
 
-        int count = 0;
-        while(isExecuting)
-        {
-            RootTools.log("Waiting on shell to finish executing before closing...");
-            count++;
+        RootShell.log("Shell Closed!");
 
-            //failsafe to keep from hanging...
-            if(count > 1000)
-            {
-                break;
-            }
-        }
-
-        RootTools.log("Shell Closed!");
-
-        if (this == Shell.rootShell)
+        if (this == Shell.rootShell) {
             Shell.rootShell = null;
-        else if (this == Shell.shell)
+        } else if (this == Shell.shell) {
             Shell.shell = null;
-        else if (this == Shell.customShell)
+        } else if (this == Shell.customShell) {
             Shell.customShell = null;
+        }
     }
 
     public static void closeCustomShell() throws IOException {
-        if (Shell.customShell == null)
+        RootShell.log("Request to close custom shell!");
+
+        if (Shell.customShell == null) {
             return;
+        }
+
         Shell.customShell.close();
     }
 
     public static void closeRootShell() throws IOException {
-        if (Shell.rootShell == null)
+        RootShell.log("Request to close root shell!");
+
+        if (Shell.rootShell == null) {
             return;
+        }
         Shell.rootShell.close();
     }
 
     public static void closeShell() throws IOException {
-        if (Shell.shell == null)
+        RootShell.log("Request to close normal shell!");
+
+        if (Shell.shell == null) {
             return;
+        }
         Shell.shell.close();
     }
 
     public static void closeAll() throws IOException {
+        RootShell.log("Request to close all shells!");
+
         Shell.closeShell();
         Shell.closeRootShell();
         Shell.closeCustomShell();
@@ -317,12 +386,99 @@ public class Shell {
     }
 
     public static Shell getOpenShell() {
-        if (Shell.customShell != null)
+        if (Shell.customShell != null) {
             return Shell.customShell;
-        else if (Shell.rootShell != null)
+        } else if (Shell.rootShell != null) {
             return Shell.rootShell;
-        else
+        } else {
             return Shell.shell;
+        }
+    }
+
+    /**
+     * From libsuperuser.
+     *
+     * <p>
+     * Detects the version of the su binary installed (if any), if supported
+     * by the binary. Most binaries support two different version numbers,
+     * the public version that is displayed to users, and an internal
+     * version number that is used for version number comparisons. Returns
+     * null if su not available or retrieving the version isn't supported.
+     * </p>
+     * <p>
+     * Note that su binary version and GUI (APK) version can be completely
+     * different.
+     * </p>
+     * <p>
+     * This function caches its result to improve performance on multiple
+     * calls
+     * </p>
+     *
+     * @param internal Request human-readable version or application
+     *                 internal version
+     * @return String containing the su version or null
+     */
+    private synchronized String getSuVersion(boolean internal) {
+        int idx = internal ? 0 : 1;
+        if (suVersion[idx] == null) {
+            String version = null;
+
+            // Replace libsuperuser:Shell.run with manual process execution
+            Process process;
+            try {
+                process = Runtime.getRuntime().exec(internal ? "su -V" : "su -v", null);
+                process.waitFor();
+            } catch (IOException e) {
+                e.printStackTrace();
+                return null;
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+                return null;
+            }
+
+            // From libsuperuser:StreamGobbler
+            List<String> stdout = new ArrayList<String>();
+
+            BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
+            try {
+                String line = null;
+                while ((line = reader.readLine()) != null) {
+                    stdout.add(line);
+                }
+            } catch (IOException e) {
+            }
+            // make sure our stream is closed and resources will be freed
+            try {
+                reader.close();
+            } catch (IOException e) {
+            }
+
+            process.destroy();
+
+            List<String> ret = stdout;
+
+            if (ret != null) {
+                for (String line : ret) {
+                    if (!internal) {
+                        if (line.contains(".")) {
+                            version = line;
+                            break;
+                        }
+                    } else {
+                        try {
+                            if (Integer.parseInt(line) > 0) {
+                                version = line;
+                                break;
+                            }
+                        } catch (NumberFormatException e) {
+                        }
+                    }
+                }
+            }
+
+            suVersion[idx] = version;
+        }
+        return suVersion[idx];
     }
 
     public static boolean isShellOpen() {
@@ -339,6 +495,51 @@ public class Shell {
 
     public static boolean isAnyShellOpen() {
         return Shell.shell != null || Shell.rootShell != null || Shell.customShell != null;
+    }
+
+    /**
+     * From libsuperuser.
+     *
+     * Detect if SELinux is set to enforcing, caches result
+     *
+     * @return true if SELinux set to enforcing, or false in the case of
+     * permissive or not present
+     */
+    public synchronized boolean isSELinuxEnforcing() {
+        if (isSELinuxEnforcing == null) {
+            Boolean enforcing = null;
+
+            // First known firmware with SELinux built-in was a 4.2 (17)
+            // leak
+            if (android.os.Build.VERSION.SDK_INT >= 17) {
+
+                // Detect enforcing through sysfs, not always present
+                File f = new File("/sys/fs/selinux/enforce");
+                if (f.exists()) {
+                    try {
+                        InputStream is = new FileInputStream("/sys/fs/selinux/enforce");
+                        try {
+                            enforcing = (is.read() == '1');
+                        } finally {
+                            is.close();
+                        }
+                    } catch (Exception e) {
+                    }
+                }
+
+                // 4.4+ builds are enforcing by default, take the gamble
+                if (enforcing == null) {
+                    enforcing = (android.os.Build.VERSION.SDK_INT >= 19);
+                }
+            }
+
+            if (enforcing == null) {
+                enforcing = false;
+            }
+
+            isSELinuxEnforcing = enforcing;
+        }
+        return isSELinuxEnforcing;
     }
 
     /**
@@ -372,9 +573,8 @@ public class Shell {
                         /**
                          * wait for the read to catch up.
                          */
-                        while (read != write)
-                        {
-                            RootTools.log("Waiting for read and write to catch up before cleanup.");
+                        while (read != write) {
+                            RootShell.log("Waiting for read and write to catch up before cleanup.");
                         }
                         /**
                          * Clean up the commands, stay neat.
@@ -392,12 +592,12 @@ public class Shell {
                         isExecuting = true;
                         Command cmd = commands.get(write);
                         cmd.startExecution();
-                        RootTools.log("Executing: " + cmd.getCommand() + " with context: " + shellContext);
+                        RootShell.log("Executing: " + cmd.getCommand() + " with context: " + shellContext);
 
-                        out.write(cmd.getCommand());
+                        outputStream.write(cmd.getCommand());
                         String line = "\necho " + token + " " + totalExecuted + " $?\n";
-                        out.write(line);
-                        out.flush();
+                        outputStream.write(line);
+                        outputStream.flush();
                         write++;
                         totalExecuted++;
                     } else if (close) {
@@ -405,19 +605,19 @@ public class Shell {
                          * close the thread, the shell is closing.
                          */
                         isExecuting = false;
-                        out.write("\nexit 0\n");
-                        out.flush();
-                        RootTools.log("Closing shell");
+                        outputStream.write("\nexit 0\n");
+                        outputStream.flush();
+                        RootShell.log("Closing shell");
                         return;
                     }
                 }
             } catch (IOException e) {
-                RootTools.log(e.getMessage(), 2, e);
+                RootShell.log(e.getMessage(), RootShell.LogLevel.ERROR, e);
             } catch (InterruptedException e) {
-                RootTools.log(e.getMessage(), 2, e);
+                RootShell.log(e.getMessage(), RootShell.LogLevel.ERROR, e);
             } finally {
                 write = 0;
-                closeQuietly(out);
+                closeQuietly(outputStream);
             }
         }
     };
@@ -436,27 +636,32 @@ public class Shell {
 
     /**
      * Runnable to monitor the responses from the open shell.
+     *
+     * This include the output and error stream
      */
     private Runnable output = new Runnable() {
         public void run() {
             try {
                 Command command = null;
 
-                while (!close) {
+                //as long as there is something to read, we will keep reading.
+                while (!close || inputStream.ready() || read < commands.size()) {
                     isReading = false;
-                    String line = in.readLine();
+                    String outputLine = inputStream.readLine();
                     isReading = true;
 
                     /**
-                     * If we recieve EOF then the shell closed
+                     * If we recieve EOF then the shell closed?
                      */
-                    if (line == null)
+                    if (outputLine == null) {
                         break;
+                    }
 
                     if (command == null) {
                         if (read >= commands.size()) {
-                            if (close)
+                            if (close) {
                                 break;
+                            }
 
                             continue;
                         }
@@ -469,24 +674,25 @@ public class Shell {
                      *
                      * if the token is present then the command has finished execution.
                      */
-                    int pos = line.indexOf(token);
+                    int pos = -1;
 
+                    pos = outputLine.indexOf(token);
 
                     if (pos == -1) {
                         /**
                          * send the output for the implementer to process
                          */
-                        command.output(command.id, line);
+                        command.output(command.id, outputLine);
+                    } else if (pos > 0) {
+                        /**
+                         * token is suffix of output, send output part to implementer
+                         */
+                        command.output(command.id, outputLine.substring(0, pos));
                     }
-                    if (pos > 0) {
-                    	/**
-                    	 * token is suffix of output, send output part to implementer
-                    	 */
-                    	command.output(command.id, line.substring(0, pos));
-                    }
+
                     if (pos >= 0) {
-                    	line = line.substring(pos);
-                        String fields[] = line.split(" ");
+                        outputLine = outputLine.substring(pos);
+                        String fields[] = outputLine.split(" ");
 
                         if (fields.length >= 2 && fields[1] != null) {
                             int id = 0;
@@ -504,6 +710,35 @@ public class Shell {
                             }
 
                             if (id == totalRead) {
+                                processErrors(command);
+
+
+                                /**
+                                 * wait for output to be processed...
+                                 *
+                                 */
+                                int iterations = 0;
+                                while (command.totalOutput > command.totalOutputProcessed) {
+
+                                    if(iterations == 0)
+                                    {
+                                        iterations++;
+                                        RootShell.log("Waiting for output to be processed. " + command.totalOutputProcessed + " Of " + command.totalOutput);
+                                    }
+
+                                    try {
+
+                                        synchronized (this)
+                                        {
+                                            this.wait(2000);
+                                        }
+                                    } catch (Exception e) {
+                                        RootShell.log(e.getMessage());
+                                    }
+                                }
+
+                                RootShell.log("Read all output");
+
                                 command.setExitCode(exitCode);
                                 command.commandFinished();
                                 command = null;
@@ -516,20 +751,27 @@ public class Shell {
                     }
                 }
 
-                RootTools.log("Read all output");
                 try {
                     proc.waitFor();
                     proc.destroy();
-                } catch (Exception e) {}
-
-                closeQuietly(out);
-                closeQuietly(in);
+                } catch (Exception e) {
+                }
 
                 while (read < commands.size()) {
-                    if (command == null)
+                    if (command == null) {
                         command = commands.get(read);
+                    }
 
-                    command.terminated("Unexpected Termination.");
+                    if(command.totalOutput < command.totalOutputProcessed)
+                    {
+                        command.terminated("All output not processed!");
+                        command.terminated("Did you forget the super.commandOutput call or are you waiting on the command object?");
+                    }
+                    else
+                    {
+                        command.terminated("Unexpected Termination.");
+                    }
+
                     command = null;
                     read++;
                 }
@@ -537,15 +779,40 @@ public class Shell {
                 read = 0;
 
             } catch (IOException e) {
-                RootTools.log(e.getMessage(), 2, e);
-            }
-            finally {
-                RootTools.log("Shell destroyed");
+                RootShell.log(e.getMessage(), RootShell.LogLevel.ERROR, e);
+            } finally {
+                closeQuietly(outputStream);
+                closeQuietly(errorStream);
+                closeQuietly(inputStream);
+
+                RootShell.log("Shell destroyed");
                 isClosed = true;
                 isReading = false;
             }
         }
     };
+
+    public void processErrors(Command command) {
+        try {
+            while (errorStream.ready() && command != null) {
+                String line = errorStream.readLine();
+
+                /**
+                 * If we recieve EOF then the shell closed?
+                 */
+                if (line == null) {
+                    break;
+                }
+
+                /**
+                 * send the output for the implementer to process
+                 */
+                command.output(command.id, line);
+            }
+        } catch (Exception e) {
+            RootShell.log(e.getMessage(), RootShell.LogLevel.ERROR, e);
+        }
+    }
 
     public static void runRootCommand(Command command) throws IOException, TimeoutException, RootDeniedException {
         Shell.startRootShell().add(command);
@@ -568,34 +835,56 @@ public class Shell {
     }
 
     public static Shell startRootShell(int timeout, ShellContext shellContext, int retry) throws IOException, TimeoutException, RootDeniedException {
+        // keep prompting the user until they accept for x amount of times...
+        int retries = 0;
 
         if (Shell.rootShell == null) {
 
-            RootTools.log("Starting Root Shell!");
+            RootShell.log("Starting Root Shell!");
             String cmd = "su";
-            // keep prompting the user until they accept for x amount of times...
-            int retries = 0;
             while (Shell.rootShell == null) {
                 try {
+                    RootShell.log("Trying to open Root Shell, attempt #" + retries);
                     Shell.rootShell = new Shell(cmd, ShellType.ROOT, shellContext, timeout);
                 } catch (IOException e) {
                     if (retries++ >= retry) {
-                        RootTools.log("IOException, could not start shell");
+                        RootShell.log("IOException, could not start shell");
+                        throw e;
+                    }
+                } catch (RootDeniedException e) {
+                    if (retries++ >= retry) {
+                        RootShell.log("RootDeniedException, could not start shell");
+                        throw e;
+                    }
+                } catch (TimeoutException e) {
+                    if (retries++ >= retry) {
+                        RootShell.log("TimeoutException, could not start shell");
                         throw e;
                     }
                 }
             }
-        }
-        else if (Shell.rootShell.shellContext != shellContext) {
+        } else if (Shell.rootShell.shellContext != shellContext) {
             try {
-                RootTools.log("Context is different than open shell, switching context... " + Shell.rootShell.shellContext + " VS " + shellContext);
+                RootShell.log("Context is different than open shell, switching context... " + Shell.rootShell.shellContext + " VS " + shellContext);
                 Shell.rootShell.switchRootShellContext(shellContext);
             } catch (IOException e) {
-                RootTools.log("Context could not be switched for existing root shell...");
-                throw e;
+                if (retries++ >= retry) {
+                    RootShell.log("IOException, could not switch context!");
+                    throw e;
+                }
+            } catch (RootDeniedException e) {
+                if (retries++ >= retry) {
+                    RootShell.log("RootDeniedException, could not switch context!");
+                    throw e;
+                }
+            } catch (TimeoutException e) {
+                if (retries++ >= retry) {
+                    RootShell.log("TimeoutException, could not switch context!");
+                    throw e;
+                }
             }
         } else {
-            RootTools.log("Using Existing Root Shell!");
+            RootShell.log("Using Existing Root Shell!");
         }
 
         return Shell.rootShell;
@@ -608,10 +897,11 @@ public class Shell {
     public static Shell startCustomShell(String shellPath, int timeout) throws IOException, TimeoutException, RootDeniedException {
 
         if (Shell.customShell == null) {
-            RootTools.log("Starting Custom Shell!");
+            RootShell.log("Starting Custom Shell!");
             Shell.customShell = new Shell(shellPath, ShellType.CUSTOM, ShellContext.NORMAL, timeout);
-        } else
-            RootTools.log("Using Existing Custom Shell!");
+        } else {
+            RootShell.log("Using Existing Custom Shell!");
+        }
 
         return Shell.customShell;
     }
@@ -624,10 +914,11 @@ public class Shell {
 
         try {
             if (Shell.shell == null) {
-                RootTools.log("Starting Shell!");
+                RootShell.log("Starting Shell!");
                 Shell.shell = new Shell("/system/bin/sh", ShellType.NORMAL, ShellContext.NORMAL, timeout);
-            } else
-                RootTools.log("Using Existing Shell!");
+            } else {
+                RootShell.log("Using Existing Shell!");
+            }
             return Shell.shell;
         } catch (RootDeniedException e) {
             //Root Denied should never be thrown.
@@ -636,27 +927,25 @@ public class Shell {
     }
 
     public Shell switchRootShellContext(ShellContext shellContext) throws IOException, TimeoutException, RootDeniedException {
-        if(this.shellType == ShellType.ROOT)
-        {
+        if (this.shellType == ShellType.ROOT) {
             try {
                 Shell.closeRootShell();
-            } catch(Exception e) {
-                RootTools.log("Problem closing shell while trying to switch context...");
+            } catch (Exception e) {
+                RootShell.log("Problem closing shell while trying to switch context...");
             }
 
             //create new root shell with new context...
 
             return Shell.startRootShell(this.shellTimeout, shellContext, 3);
-        }
-        else
-        {
+        } else {
             //can only switch context on a root shell...
-            RootTools.log("Can only switch context on a root shell!");
+            RootShell.log("Can only switch context on a root shell!");
             return this;
         }
     }
 
     protected static class Worker extends Thread {
+
         public int exit = -911;
 
         public Shell shell;
@@ -678,17 +967,17 @@ public class Shell {
              * it by setting the value of the variable exit
              */
             try {
-                shell.out.write("echo Started\n");
-                shell.out.flush();
+                shell.outputStream.write("echo Started\n");
+                shell.outputStream.flush();
 
                 while (true) {
-                    String line = shell.in.readLine();
+                    String line = shell.inputStream.readLine();
+
                     if (line == null) {
                         throw new EOFException();
-                    }
-                    if ("".equals(line))
+                    } else if ("".equals(line)) {
                         continue;
-                    if ("Started".equals(line)) {
+                    } else if ("Started".equals(line)) {
                         this.exit = 1;
                         setShellOom();
                         break;
@@ -698,10 +987,11 @@ public class Shell {
                 }
             } catch (IOException e) {
                 exit = -42;
-                if (e.getMessage() != null)
+                if (e.getMessage() != null) {
                     shell.error = e.getMessage();
-                else
+                } else {
                     shell.error = "RootAccess denied?.";
+                }
             }
 
         }
@@ -709,25 +999,25 @@ public class Shell {
         /*
          * setOom for shell processes (sh and su if root shell)
          * and discard outputs
-         * 
+         *
          */
         private void setShellOom() {
-			try {
-				Class<?> processClass = shell.proc.getClass();
-				Field field;
-				try {
-					field = processClass.getDeclaredField("pid");
-				} catch (NoSuchFieldException e) {
-					field = processClass.getDeclaredField("id");
-				}
-				field.setAccessible(true);
-				int pid = (Integer) field.get(shell.proc);
-                shell.out.write("(echo -17 > /proc/" + pid + "/oom_adj) &> /dev/null\n");
-                shell.out.write("(echo -17 > /proc/$$/oom_adj) &> /dev/null\n");
-                shell.out.flush();
-			} catch (Exception e) {
+            try {
+                Class<?> processClass = shell.proc.getClass();
+                Field field;
+                try {
+                    field = processClass.getDeclaredField("pid");
+                } catch (NoSuchFieldException e) {
+                    field = processClass.getDeclaredField("id");
+                }
+                field.setAccessible(true);
+                int pid = (Integer) field.get(shell.proc);
+                shell.outputStream.write("(echo -17 > /proc/" + pid + "/oom_adj) &> /dev/null\n");
+                shell.outputStream.write("(echo -17 > /proc/$$/oom_adj) &> /dev/null\n");
+                shell.outputStream.flush();
+            } catch (Exception e) {
                 e.printStackTrace();
-			}
-		}
+            }
+        }
     }
 }
